2376.	[bug]		Change #2144 was not complete.

	--- 9.5.0-P1 released ---

2375.	[security]	Fully randomize UDP query ports to improve
			forgery resilience. [RT #17949]

	--- 9.5.0 released ---

2374.	[bug]		"blackhole" ACLs could cause named to segfault due
			to some uninitialized memory. [RT #18095]

2372.	[bug]		fixed incorrect TAG_HMACSHA256_BITS value [RT #18047]

2371.	[doc]		add +nsid option to dig man page. [RT #18039]

2370.	[bug]		"rndc freeze" could trigger an assertion in named
			when called on a nonexistent zone. [RT #18050]

	--- 9.5.0rc1 released ---

2368.	[port]		Linux: use libcap for capability management if
			possible. [RT# 18026]

2367.	[bug]		Improve counting of dns_resstatscounter_retry
			[RT #18030]

2366.	[bug]		Adb shutdown race. [RT #18021]

2365.	[bug]		Fix a bug that caused dns_acl_isany() to return
			spurious results. [RT #18000]

2364.	[bug]		named could trigger a assertion when serving a
			malformed signed zone. [RT #17828]

2363.	[port]		sunos: pre-set "lt_cv_sys_max_cmd_len=4096;".
			[RT #17513]

2362.	[cleanup]	Make "rrset-order fixed" a compile-time option.
			settable by "./configure --enable-fixed-rrset".
			Disabled by default. [RT #17977]

2361.	[bug]		"recursion" statistics counter could be counted
			multiple times for a single query.  [RT #17990]

	--- 9.5.0b3 released ---

2360.	[bug]		Fix a condition where we release a database version
			(which may acquire a lock) while holding the lock.

2359.	[bug]		Fix NSID bug. [RT #17942]

2358.	[doc]		Update host's default query description. [RT #17934]

2356.	[bug]		Built in mutex profiler was not scalable enough.
			[RT #17436]

2355.	[func]		Extend the number statistics counters available.
			[RT #17590]

2354.	[bug]		Failed to initialize some rdatasetheader_t elements.
			[RT #17927]

2353.	[func]		Add support for Name Server ID (RFC 5001).
			'dig +nsid' requests NSID from server.
			'request-nsid yes;' causes recursive server to send